# reserva-app

./: .env.example  README.md  config.py  pyproject.toml
database/: reservas.csv  salas.csv  usuarios.csv
reserva_app/: app.py
reserva_app/dao/: dao.py  implementations.py
reserva_app/db/: connection.py  exemplo.py  tables.py  user_manager.py
reserva_app/domain/: constants.py  error.py  model.py  reserva.py  sala.py  search.py  usuario.py
reserva_app/handler/: auth_handlers.py  handlers.py  reserva_handlers.py  sala_handlers.py
reserva_app/model/: reserva.py  sala.py  usuario.py
reserva_app/repository/: implementations.py  repository.py
reserva_app/util/: constants.py  search.py
templates/: base.html  cadastrar-sala.html  cadastro.html  header.html  listar-salas.html  login.html  reservar-sala.html  reservas.html
templates/layout/: auth-form.html  base.html  header.html
templates/macros/: form-filter.html  reservas-table.html
templates/reserva/: detalhes-reserva.html
